@@ -11,11 +11,19 @@ import com.aikids.care.domain.chat.model.ChatDetail;
 import com.aikids.care.domain.chat.model.Role;
 import com.aikids.care.domain.chat.repository.ChatDetailRepository;
 import com.aikids.care.domain.chat.repository.ChatRepository;
+import com.aikids.care.domain.child.repository.ChildRepository;
+import com.aikids.care.domain.user.model.SocialType;
+import com.aikids.care.domain.user.model.User;
+import com.aikids.care.domain.user.model.UserRepository;
+import com.aikids.care.global.error.CustomException;
+import com.aikids.care.global.error.ErrorCode;
+import com.aikids.care.infra.gemini.GeminiApiClient;
 import com.aikids.care.infra.stt.GoogleSttClient;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+import org.springframework.transaction.support.TransactionTemplate;
 import org.springframework.web.multipart.MultipartFile;
 import reactor.core.publisher.Flux;
 import reactor.core.publisher.Mono;
@@ -23,36 +31,42 @@ import reactor.core.scheduler.Schedulers;
 
 import java.io.IOException;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Map;
 
 @Service
 @Slf4j
 @RequiredArgsConstructor
 public class ChatService {
 
+    private static final int MAX_HISTORY_MESSAGES = 20; // 최근 10턴
+    private static final int INTERIM_SUMMARY_TRIGGER = 30; // 이 수 이상이면 중간 요약 생성
+
     private final ChatRepository chatRepository;
     private final ChatDetailRepository chatDetailRepository;
     private final ChatMessagePersistence chatMessagePersistence;
-    private final GeminiService geminiService;
     private final GoogleSttClient googleSttClient;
     private final VoiceChatStreamPipeline voiceChatStreamPipeline;
+    private final GeminiApiClient geminiApiClient;
+    private final TransactionTemplate transactionTemplate;
+    private final UserRepository userRepository;
+    private final ChildRepository childRepository;
 
-    // 1. 새로운 상담 세션(빈 방) 생성
     @Transactional
-    public Long createChat(ChatCreateRequest request) {
+    public Long createChat(String socialId, SocialType socialType, ChatCreateRequest request) {
+        User user = userRepository.findBySocialIdAndSocialType(socialId, socialType)
+                .orElseThrow(() -> new CustomException(ErrorCode.USER_NOT_FOUND));
+        childRepository.findByIdAndUser_Id(request.getChildId(), user.getId())
+                .orElseThrow(() -> new CustomException(ErrorCode.FORBIDDEN));
         Chat chat = Chat.builder()
                 .childId(request.getChildId())
                 .build();
         return chatRepository.save(chat).getId();
     }
 
-    // 2. 메시지 전송 및 AI 답변 받기
-    @Transactional
     public String sendMessage(Long chatId, ChatMessageRequest request) {
         return sendTextMessage(chatId, request.getContent(), request.getImageUrl());
     }
 
-    @Transactional
     public VoiceChatResponse sendVoiceMessage(Long chatId, MultipartFile audioFile) throws IOException {
         String userQuestion = googleSttClient.transcribe(
                 audioFile.getBytes(),
@@ -101,56 +115,101 @@ public class ChatService {
                 .thenMany(voiceChatStreamPipeline.stream(chatId, transcript));
     }
 
+    // LLM 호출 구간에 DB 커넥션을 점유하지 않도록 TransactionTemplate으로 트랜잭션 분리
     private String sendTextMessage(Long chatId, String userContent, String imageUrl) {
-        // 1) 채팅방 찾기
-        Chat chat = chatRepository.findById(chatId)
-                .orElseThrow(() -> new IllegalArgumentException("채팅방이 없습니다."));
+        List<ChatDetail> allDetails = chatDetailRepository.findByChatIdOrderByCreatedAtAsc(chatId);
+        String interimSummary = generateInterimSummaryIfNeeded(chatId, allDetails);
+        List<Map<String, String>> history = toHistory(allDetails);
 
-        // 2) 부모가 보낸 메시지(사진 포함)를 DB에 저장
-        ChatDetail userMsg = ChatDetail.builder()
-                .chat(chat)
-                .role(Role.USER)
-                .content(userContent)
-                .imageUrl(imageUrl)
-                .build();
-        chatDetailRepository.save(userMsg);
+        transactionTemplate.execute(status -> {
+            Chat chat = chatRepository.findById(chatId)
+                    .orElseThrow(() -> new CustomException(ErrorCode.CHAT_NOT_FOUND));
+            chatDetailRepository.save(ChatDetail.builder()
+                    .chat(chat)
+                    .role(Role.USER)
+                    .content(userContent)
+                    .imageUrl(imageUrl)
+                    .build());
+            return null;
+        });
 
-        // 3) AI에게 물어보고 답변 받기
-        String aiContent = geminiService.askQuestion(userContent, imageUrl);
+        String aiContent = geminiApiClient.ask(userContent, history, interimSummary);
 
-        // 4) AI의 답변을 DB에 저장
-        ChatDetail aiMsg = ChatDetail.builder()
-                .chat(chat)
-                .role(Role.AI)
-                .content(aiContent)
-                .build();
-        chatDetailRepository.save(aiMsg);
+        transactionTemplate.execute(status -> {
+            Chat chat = chatRepository.findById(chatId)
+                    .orElseThrow(() -> new CustomException(ErrorCode.CHAT_NOT_FOUND));
+            chatDetailRepository.save(ChatDetail.builder()
+                    .chat(chat)
+                    .role(Role.AI)
+                    .content(aiContent)
+                    .build());
+            return null;
+        });
 
         return aiContent;
     }
 
-    // 3. AI 분석 결과 업데이트 (PATCH API)
+    // 히스토리가 INTERIM_SUMMARY_TRIGGER 이상이면 오래된 구간을 요약하고 DB에 저장
+    private String generateInterimSummaryIfNeeded(Long chatId, List<ChatDetail> allDetails) {
+        if (allDetails.size() < INTERIM_SUMMARY_TRIGGER) {
+            return chatRepository.findById(chatId)
+                    .map(Chat::getInterimSummary)
+                    .orElse(null);
+        }
+
+        // 오래된 절반을 요약 대상으로, 최근 절반은 슬라이딩 윈도우로 유지
+        int splitAt = allDetails.size() - MAX_HISTORY_MESSAGES;
+        List<Map<String, String>> oldMessages = allDetails.subList(0, splitAt).stream()
+                .map(d -> Map.of("role", toGeminiRole(d.getRole()), "content", d.getContent()))
+                .toList();
+
+        Chat chat = chatRepository.findById(chatId)
+                .orElseThrow(() -> new CustomException(ErrorCode.CHAT_NOT_FOUND));
+        String previousSummary = chat.getInterimSummary();
+        String newSummary = geminiApiClient.summarize(oldMessages, previousSummary);
+
+        transactionTemplate.execute(status -> {
+            Chat c = chatRepository.findById(chatId)
+                    .orElseThrow(() -> new CustomException(ErrorCode.CHAT_NOT_FOUND));
+            c.updateInterimSummary(newSummary);
+            return null;
+        });
+
+        return newSummary;
+    }
+
+    public void closeChat(Long chatId) {
+        List<Map<String, String>> history = loadHistory(chatId);
+        if (history.isEmpty()) return;
+
+        Chat chat = chatRepository.findById(chatId)
+                .orElseThrow(() -> new CustomException(ErrorCode.CHAT_NOT_FOUND));
+        String summary = geminiApiClient.summarize(history, chat.getInterimSummary());
+
+        transactionTemplate.execute(status -> {
+            Chat c = chatRepository.findById(chatId)
+                    .orElseThrow(() -> new CustomException(ErrorCode.CHAT_NOT_FOUND));
+            c.updateSummary(summary);
+            return null;
+        });
+    }
+
     @Transactional
     public void updateChatResult(Long chatId, ChatUpdateRequest request) {
         Chat chat = chatRepository.findById(chatId)
-                .orElseThrow(() -> new IllegalArgumentException("채팅방이 없습니다."));
-
+                .orElseThrow(() -> new CustomException(ErrorCode.CHAT_NOT_FOUND));
         chat.updateResult(request.getCategory(), request.getRiskLevel());
     }
 
-    // 4. 채팅방 삭제
     @Transactional
     public void deleteChat(Long chatId) {
         Chat chat = chatRepository.findById(chatId)
-                .orElseThrow(() -> new IllegalArgumentException("채팅방이 없습니다."));
+                .orElseThrow(() -> new CustomException(ErrorCode.CHAT_NOT_FOUND));
         chatRepository.delete(chat);
     }
 
     public List<ChatDetailResponse> getChatHistory(Long chatId) {
-        // 1. 해당 채팅방(chatId)의 대화 내역을 시간순(오래된 것 -> 최신 것)으로 가져옵니다.
         List<ChatDetail> details = chatDetailRepository.findByChatIdOrderByCreatedAtAsc(chatId);
-
-        // 2. DB 엔티티(ChatDetail)를 프론트엔드용 DTO(ChatDetailResponse)로 변환해서 리스트로 묶어 반환합니다.
         return details.stream()
                 .map(detail -> new ChatDetailResponse(
                         detail.getId(),
@@ -159,25 +218,42 @@ public class ChatService {
                         detail.getImageUrl(),
                         detail.getCreatedAt()
                 ))
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    // 특정 아이의 상담 방 번호 목록을 최신순으로 조회
-    public List<Long> getChatRoomList(Long childId) {
+    public List<Long> getChatRoomList(String socialId, SocialType socialType, Long childId) {
+        User user = userRepository.findBySocialIdAndSocialType(socialId, socialType)
+                .orElseThrow(() -> new CustomException(ErrorCode.USER_NOT_FOUND));
+        childRepository.findByIdAndUser_Id(childId, user.getId())
+                .orElseThrow(() -> new CustomException(ErrorCode.FORBIDDEN));
         return chatRepository.findByChildIdOrderByCreatedAtDesc(childId)
                 .stream()
                 .map(Chat::getId)
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    private List<Map<String, String>> loadHistory(Long chatId) {
+        List<ChatDetail> details = chatDetailRepository.findByChatIdOrderByCreatedAtAsc(chatId);
+        return toHistory(details);
+    }
+
+    private List<Map<String, String>> toHistory(List<ChatDetail> details) {
+        List<ChatDetail> recent = details.size() > MAX_HISTORY_MESSAGES
+                ? details.subList(details.size() - MAX_HISTORY_MESSAGES, details.size())
+                : details;
+        return recent.stream()
+                .map(d -> Map.of("role", toGeminiRole(d.getRole()), "content", d.getContent()))
+                .toList();
+    }
+
+    private String toGeminiRole(Role role) {
+        return role == Role.USER ? "user" : "model";
     }
 
     private String abbreviate(String text, int maxLength) {
-        if (text == null) {
-            return "";
-        }
+        if (text == null) return "";
         String normalized = text.replaceAll("\\s+", " ").trim();
-        if (normalized.length() <= maxLength) {
-            return normalized;
-        }
+        if (normalized.length() <= maxLength) return normalized;
         return normalized.substring(0, maxLength) + "...";
     }
 }
